icon size fixed / password hint box visibility solved / placeholder for gmail done / border radious for info boxes improved / gap for main login box for each div solved

--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,10 @@ body{
     box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.196);
     border-radius: 20px;
     margin-bottom: 4rem;
-    padding: 3rem
+    padding: 3rem;
+    display: flex;
+    flex-direction: column;
+    gap: 3rem;
 }
 
 .form-name{
@@ -81,7 +84,7 @@ body{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-top: 3rem;
+    /* margin-top: 3rem; */
     color: #64748B;
     line-height: 2.4rem;
  }
@@ -91,7 +94,7 @@ body{
  }
 
 .login-options{
-    margin-top: 3rem;
+    /* margin-top: 3rem; */
     display: grid;
     grid-template-columns: 7rem 7rem;
     grid-template-rows: 3rem 3rem;
@@ -140,18 +143,21 @@ body{
 .pass{
     display: none;
     margin-bottom: 1rem;
-    box-shadow:  5px 5px 20px rgba(0, 0, 0, 0.196);
+}
+
+.passs:focus-visible ~ .pass {
+    display: block;
 }
 
 .form{
- margin-top: 3rem;
+ /* margin-top: 3rem; */
 display: flex;
 flex-direction: column;
 }
 
 .input{
     background: #F4F5F7;
-    border-radius: 15px;
+    border-radius: 8px;
     box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.14);
     margin-bottom: 1rem;
     border:1px solid transparent;
@@ -168,6 +174,7 @@ flex-direction: column;
 .label{
     color: #64748B;
     transition: all 0.2s;
+    margin-bottom: 0.2rem;
 }
 .label:hover{
     color: black;
@@ -182,7 +189,7 @@ flex-direction: column;
     border-radius: 15px;
     font-size: 20px;
     cursor: pointer;
-    border: transparent;
+    border: 1PX solid transparent;
     margin-top: 1.2rem;
     transition: all 0.2s;
 }
